# crispy-journey

./: .bandit  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
src/crispy_journey/: __init__.py  __main__.py  automation.py  main.py  utils.py
src/crispy_journey.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_automation.py  test_crispy_journey.py  test_main.py  test_utils.py
